Added star at mouse pos, stars in background

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Starfield of Colors</title>
+		<title>Starfield of colors</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Look! It's a lot of colors following your mouse..
+		    You're a star! You have tons of fans all across the *galaxy*...
 	    </footer>
 	</body>
 </html>
